--- a/Mini Project (CSS)/index.html
+++ b/Mini Project (CSS)/index.html
@@ -18,6 +18,8 @@
     />
 
     <link rel="stylesheet" href="style.css">
+
+    
   </head>
   <body>
     <div class="main_box">
@@ -34,7 +36,7 @@
         </div>
 
         <div class="btn_two">
-          <label for="check" style="color: grey">
+          <label for="check">
             <i class="fa-solid fa-xmark"></i>
           </label>
         </div>
