--- a/Booststrap/Sign_in.html
+++ b/Booststrap/Sign_in.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html>l
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Page</title>
+  <title>Sign in Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="Boost_Project.css">
+  <link rel="stylesheet" href="Sign_in.css">
 
 </head>
 <body>
@@ -20,7 +20,7 @@
         <form class="rounded bg-white shadow p-5">
           <h3 class="text-dark fw-bolder fs-4 mb-2">Sign In to HILLTOP </h3>
           <div class="fw-normal text-muted mb-4">
-            New Here? <a href="#" class="text-primary fw-bold text-decoration-none">Create an Account</a>
+            New Here? <a href="Sign_up.html" class="text-primary fw-bold text-decoration-none">Create an Account</a>
           </div>
           <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
