--- a/Booststrap/Sign_in.html
+++ b/Booststrap/Sign_in.html
@@ -31,7 +31,7 @@
             <label for="floatingPassword">Password</label>
           </div>
           <div class="mt-2 text-end">
-            <a href="#" class="text-primary fw-bold text-decoration-none">Forget Password?</a>
+            <a href="Forgot_password.html" class="text-primary fw-bold text-decoration-none">Forget Password?</a>
           </div>
           <button type="submit" class="btn btn-primary submit_btn w-100 my-4">Continue</button>
           <div class="text-center text-muted text-uppercase mb-2">or</div>
