--- a/Booststrap/Project_1.html
+++ b/Booststrap/Project_1.html
@@ -24,7 +24,7 @@
             <a class="nav-link" aria-current="page" href="/">Home <span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/Booststrap/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -127,7 +127,7 @@
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary-emphasis">World</strong>
-            <h3 class="mb-0">Featured post</h3>
+            <h3 class="mb-0">Global Conferences</h3>
             <div class="mb-1 text-body-secondary">Nov 12</div>
             <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
             <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
@@ -136,7 +136,9 @@
             </a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            <div class="col-auto d-none d-lg-block">
+              <img src="https://source.unsplash.com/random/200x260/?World" alt="..." class="bd-placeholder-img" width="200" height="250">
+            </div>
           </div>
         </div>
       </div>
@@ -144,7 +146,7 @@
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-success-emphasis">Design</strong>
-            <h3 class="mb-0">Post title</h3>
+            <h3 class="mb-0">Learn Designing</h3>
             <div class="mb-1 text-body-secondary">Nov 11</div>
             <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
             <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
@@ -153,7 +155,48 @@
             </a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/Booststrap/images/4.jpg" alt="..." class="bd-placeholder-img" width="200" height="250">
+            <img src="https://source.unsplash.com/random/200x260/?Learn" alt="..." class="bd-placeholder-img" width="200" height="250">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container my-4">
+    <div class="row mb-2">
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-primary-emphasis">World</strong>
+            <h3 class="mb-0">Indian Conferences</h3>
+            <div class="mb-1 text-body-secondary">Nov 12</div>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+              Continue reading
+              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+            </a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <div class="col-auto d-none d-lg-block">
+              <img src="https://source.unsplash.com/random/200x260/?Conferences" alt="..." class="bd-placeholder-img" width="200" height="250">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-success-emphasis">Design</strong>
+            <h3 class="mb-0">Book House</h3>
+            <div class="mb-1 text-body-secondary">Nov 11</div>
+            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+              Continue reading
+              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+            </a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="https://source.unsplash.com/random/200x260/?Designing" alt="..." class="bd-placeholder-img" width="200" height="250">
           </div>
         </div>
       </div>
