--- a/JAVASCRIPT PART 2/javascript.html
+++ b/JAVASCRIPT PART 2/javascript.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="javascript.css">
 </head>
 <body>
+  <p>Hello</p>
   
-  <script src="app.js"></script>
+  <script src="Assignment.js"></script>
 </body>
 </html>
