--- a/Landing Pages/Lp_1.html
+++ b/Landing Pages/Lp_1.html
@@ -9,7 +9,9 @@
 <body>
   <div id="main">
     <div id="part1"></div>
-    <div id="part2"></div>
+    <div id="part2">
+      <img src="1.jpg" width="1072px" height="743px" alt="random">
+    </div>
     <div id="part3"></div>
   </div>
 </body>
