--- a/Mini Project (CSS)/index.html
+++ b/Mini Project (CSS)/index.html
@@ -1,6 +1,7 @@
 <!-- this is my first project -->
 
 <!-- this is a resturant website -->
+<!-- we will continue leter -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
