--- a/Landing Pages/Lp_1.html
+++ b/Landing Pages/Lp_1.html
@@ -3,16 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LP 1</title>
+  <title>Landing Page 1</title>
   <link rel="stylesheet" href="LP_1.css">
 </head>
 <body>
   <div id="main">
-    <div id="part1"></div>
-    <div id="part2">
-      <img src="1.jpg" width="1072px" height="743px" alt="random">
+    <div id="left">
+      <div id="lnav">
+        (back)
+        <div id="lnavr">
+          <a href="">Home</a>
+          <a href="">Work</a>
+        </div>
+      </div>
     </div>
-    <div id="part3"></div>
+    <div id="right">
+      <div id="rtop">
+        <div id="rtopleft"></div>
+        <div id="rtopright"></div>
+      </div>
+      <div id="rbottom"></div>
+    </div>
   </div>
 </body>
 </html>
