--- a/Landing Pages/Lp_1.html
+++ b/Landing Pages/Lp_1.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page 1</title>
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="LP_1.css">
 </head>
+
 <body>
   <div id="main">
     <div id="left">
       <div id="lnav">
-        (back)
+        <i class="ri-arrow-left-line"></i>
         <div id="lnavr">
           <a href="">Home</a>
           <a href="">Work</a>
+          <i class="ri-twitter-fill"></i>
         </div>
+      </div>
+      <div id="textcenter">
+        <h1>HELLO,</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem numquam tempore, voluptatibus ut maxime sapiente sunt omnis nam distinctio modi hic eius corporis amet.</p>
+        <a href="#">Read</a>
       </div>
     </div>
     <div id="right">
@@ -26,4 +35,5 @@
     </div>
   </div>
 </body>
+
 </html>
